# libssdp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
include/: ssdp.h
include/ssdp/: AbstractSocket.h  Device.h  HttpResponseParser.h  StringUtils.h  UDPSocket.h
samples/: CMakeLists.txt
samples/serviceList/: CMakeLists.txt  main.cpp
samples/servicesResponse/: CMakeLists.txt  main.cpp
samples/waitAnnounce/: CMakeLists.txt  main.cpp
src/: AbstractSocket.cpp  Device.cpp  HttpResponseParser.cpp  StringUtils.cpp  UDPSocket.cpp  main.cpp  ssdp.cpp
tests/: CMakeLists.txt  DeviceTest.cpp  HttpResponseParserTest.cpp  SocketTest.cpp  StringUtilsTest.cpp  tests.cpp
